Fix the status bar and left align the logo

--- a/src/site.sass
+++ b/src/site.sass
@@ -31,11 +31,8 @@ header
     padding-top: 5px
   // Logo
   img
-    margin-left: $spaceTiny
     +phone
       height: 20px
-    +tabletAndUp
-      margin-left: 80px
 
 .avatar
   background-image: none
